--- a/course-materials/graphic-design.qmd
+++ b/course-materials/graphic-design.qmd
@@ -14,10 +14,12 @@ knitr::include_graphics(here::here("images", "graphic-design-logos.png"))
 ```
 
 ::: {.center-text .gray-text}
-*Logos of various software which can be used for graphic design work. [Affinity Designer](https://affinity.serif.com/en-us/designer/){target="_blank"} (top left), [Canva](https://www.canva.com/){target="_blank"} (bottom left), and [Google Docs](https://docs.google.com/){target="_blank"} (right).*
+*Logos of various software which can be used for graphic design work. [Affinity Designer](https://affinity.serif.com/en-us/designer/){target="_blank"} (left), [Canva](https://www.canva.com/){target="_blank"} (top right), and [Google Docs](https://docs.google.com/){target="_blank"} (bottom right).*
 :::
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lecture Prep {#pre-class-prep}
+
+**This workshop will focus primarily on using Affinity Designer for infographic design.** We'll see various examples of work created using Canva and Google Docs, though we won't spend much time learning these tools. They *are* awesome (and free) alternatives to Affinity, so you may decide to explore these more on your own time.
 
 ### A. Download / install your *free* Affinity V2 Designer Trial
 
@@ -25,11 +27,11 @@ The Affinity team was kind enough to provide us with 40(!) extended Affinity V2 
 
 Affinity is a subscription-free product -- if you are interested in purchasing it after your trial ends, visit [their website](https://affinity.serif.com/en-us/affinity-pricing/){target="_blank"}.
 
-### B. Create a *free* Canva account
+### B. *(Optional)* Create a *free* Canva account
 
 Visit [canva.com](https://www.canva.com/free/){target="_blank"} to get started.
 
-### C. Make sure you know how to access Google Docs
+### C. *(Optional)* Make sure you know how to access Google Docs
 
 Access all of your Google Apps (including Goolge Docs) using your **UCSBnetID@ucsb.edu** account.
 
