--- a/course-materials/lecture-slides/lecture4.1-rankings-slides.qmd
+++ b/course-materials/lecture-slides/lecture4.1-rankings-slides.qmd
@@ -186,7 +186,6 @@ jobs_clean <- jobs |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "4-5"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
@@ -200,15 +199,13 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "4-7"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot() + 
-  geom_point(aes(x = occupation, y = total_earnings)) +
-  geom_segment(aes(x = occupation, xend = occupation,
-                   y = 0, yend = total_earnings))
+  ggplot(aes(x = occupation, y = total_earnings)) + 
+  geom_point() +
+  geom_linerange(aes(ymin = 0, ymax = total_earnings))
 ```
 
 :::
@@ -250,15 +247,14 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "8"
+#| code-line-numbers: "7"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot() + 
-  geom_point(aes(x = occupation, y = total_earnings)) +
-  geom_segment(aes(x = occupation, xend = occupation,
-                   y = 0, yend = total_earnings)) +
+  ggplot(aes(x = occupation, y = total_earnings)) + 
+  geom_point() +
+  geom_linerange(aes(ymin = 0, ymax = total_earnings)) +
   coord_flip()
 ```
 :::
@@ -286,7 +282,8 @@ jobs_clean |>
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot(aes(x = fct_reorder(.f = occupation, .x = total_earnings), y = total_earnings)) +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) +
   geom_col() +
   coord_flip()
 ```
@@ -301,10 +298,10 @@ jobs_clean |>
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot() + 
-  geom_point(aes(x = fct_reorder(.f = occupation, .x = total_earnings), y = total_earnings)) + # fct_reorder modifies the factor levels for our `occupation` variable; because `geom_point()` & `geom_segment()` use the same dataset, this reordered factor applies to both layers
-  geom_segment(aes(x = occupation, xend = occupation,
-                   y = 0, yend = total_earnings)) +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) + 
+  geom_point() +
+  geom_linerange(aes(ymin = 0, ymax = total_earnings)) +
   coord_flip()
 ```
 :::
@@ -331,12 +328,13 @@ While we're on the topic of making things easier to read, let's use the [`{scale
 ```{r}
 #| eval: true
 #| echo: true 
-#| code-line-numbers: "6"
+#| code-line-numbers: "7"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot(aes(x = fct_reorder(occupation, total_earnings), y = total_earnings)) +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) +
   geom_col() +
   scale_y_continuous(labels = scales::label_currency(accuracy = 1, scale = 0.001, suffix = "k")) + 
   coord_flip()
@@ -347,20 +345,21 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "6"
+#| code-line-numbers: "8"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot(aes(x = fct_reorder(occupation, total_earnings), y = total_earnings)) +
-  ggalt::geom_lollipop() +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) + 
+  geom_point() +
+  geom_linerange(aes(ymin = 0, ymax = total_earnings)) +
   scale_y_continuous(labels = scales::label_currency(accuracy = 1, scale = 0.001, suffix = "k")) + 
   coord_flip()
 ```
 :::
 
 ::::
-
 
 ---
 
@@ -378,12 +377,13 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true 
-#| code-line-numbers: "6"
+#| code-line-numbers: "7"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot(aes(x = fct_reorder(occupation, total_earnings), y = total_earnings)) +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) +
   geom_col() +
   geom_text(aes(label = scales::dollar(total_earnings)), hjust = 1.2, color = "white") + 
   scale_y_continuous(labels = scales::label_currency(accuracy = 1, scale = 0.001, suffix = "k")) + 
@@ -395,13 +395,16 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "6,8"
+#| code-line-numbers: "8,10"
 #| fig-align: "center"
+#| out-width: "80%"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
-  ggplot(aes(x = fct_reorder(occupation, total_earnings), y = total_earnings)) +
-  ggalt::geom_lollipop() +
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  ggplot(aes(x = occupation, y = total_earnings)) +
+  geom_point() +
+  geom_segment(aes(y = 0, yend = total_earnings)) +
   geom_text(aes(label = scales::dollar(total_earnings)), hjust = -0.2) + 
   scale_y_continuous(labels = scales::label_currency(accuracy = 1, scale = 0.001, suffix = "k"),
                      limits = c(0, 250000)) + # expand axis to make room for values
@@ -412,7 +415,7 @@ jobs_clean |>
 ::::
 
 ::: {.footer .center-text .body-text-s}
-[For some more advanced label manipulation, see [A Quick How-to on Labelling Bar Graphs in ggplot2](https://www.cedricscherer.com/2021/07/05/a-quick-how-to-on-labelling-bar-graphs-in-ggplot2/), by Cédric Scherer | Also, see this Posit Community [post](https://community.rstudio.com/t/using-label-percent-with-the-label-argument-of-geom-text-and-geom-label/54244) regarding the use of `scales::dollar()`]{.body-text-s}
+For some more advanced label manipulation, see [A Quick How-to on Labelling Bar Graphs in ggplot2](https://www.cedricscherer.com/2021/07/05/a-quick-how-to-on-labelling-bar-graphs-in-ggplot2/), by Cédric Scherer | Also, see this Posit Community [post](https://community.rstudio.com/t/using-label-percent-with-the-label-argument-of-geom-text-and-geom-label/54244) regarding the use of `scales::dollar()`
 :::
 
 ---
@@ -465,7 +468,7 @@ ggplot(jobs_clean, aes(x = major_category)) +
 
 <hr>
 
-[We'll need to transform our data from wide to long format, where total earning for males and females are in the same column (we'll name this `earnings_by_group`), and a secondary column denotes which group those earnings are associated with (`total_earnings_female`, `total_earnings_male`). Also note that because `geom_lollipop()` doesn't accept a `position` parameter, we'll instead use `geom_linerange()` + `geom_point()`:]{.body-text-s}
+[We'll need to transform our data from wide to long format, where total earning for males and females are in the same column (we'll name this `earnings_by_group`), and a secondary column denotes which group those earnings are associated with (`total_earnings_female`, `total_earnings_male`):]{.body-text-s}
 
 :::: columns 
 
@@ -474,12 +477,15 @@ ggplot(jobs_clean, aes(x = major_category)) +
 #| eval: true
 #| echo: true 
 #| fig-align: "center"
+#| code-line-numbers: "5-7"
+#| out-width: "80%"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
   pivot_longer(cols = c(total_earnings_female, total_earnings_male), names_to = "group", values_to = "earnings_by_group") |> 
-  mutate(sex = str_remove(group, pattern = "total_earnings_")) |> 
-  ggplot(aes(x = fct_reorder(occupation, earnings_by_group), y = earnings_by_group, fill = sex)) + 
+  mutate(sex = str_remove(string = group, pattern = "total_earnings_")) |> 
+  ggplot(aes(x = occupation, y = earnings_by_group, fill = sex)) + 
   geom_col() + # default `position = "stack"`
   coord_flip()
 ```
@@ -489,17 +495,18 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
+#| code-line-numbers: "5-7"
 #| fig-align: "center"
 #| out-width: "70%"
-jobs_clean |> 
-  filter(year == 2016) |> 
-  slice_max(order_by = total_earnings, n = 10) |> 
-  pivot_longer(cols = c(total_earnings_female, total_earnings_male), names_to = "group", values_to = "earnings_by_group") |> 
-  mutate(sex = str_remove(group, pattern = "total_earnings_")) |> 
-  ggplot(aes(x = fct_reorder(occupation, earnings_by_group), y = earnings_by_group, color = sex)) +
-  geom_point() + # default `position = "stack"`
-  geom_linerange(aes(xmin = occupation, xmax = occupation, 
-                     ymin = 0, ymax = earnings_by_group)) + # default `position = "stack"`
+jobs_clean |>
+  filter(year == 2016) |>
+  slice_max(order_by = total_earnings, n = 10) |>
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
+  pivot_longer(cols = c(total_earnings_female, total_earnings_male), names_to = "group", values_to = "earnings_by_group") |>
+  mutate(sex = str_remove(group, pattern = "total_earnings_")) |>
+  ggplot(aes(x = occupation, y = earnings_by_group, color = sex)) +
+  geom_point() +
+  geom_linerange(aes(ymin = 0, ymax = earnings_by_group)) +
   coord_flip()
 ```
 
@@ -523,14 +530,15 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true 
-#| code-line-numbers: "7"
+#| code-line-numbers: "8"
 #| fig-align: "center"
 jobs_clean |> 
   filter(year == 2016) |> 
   slice_max(order_by = total_earnings, n = 10) |> 
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
   pivot_longer(cols = c(total_earnings_female, total_earnings_male), names_to = "group", values_to = "earnings_by_group") |> 
   mutate(sex = str_remove(group, pattern = "total_earnings_")) |> 
-  ggplot(aes(x = fct_reorder(occupation, earnings_by_group), y = earnings_by_group, fill = sex)) +
+  ggplot(aes(x = occupation, y = earnings_by_group, fill = sex)) +
   geom_col(position = position_dodge()) +
   coord_flip()
 ```
@@ -540,18 +548,18 @@ jobs_clean |>
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "7-10"
+#| code-line-numbers: "8-10"
 #| out-width: "80%"
 #| fig-align: "center"
 jobs_clean |>
   filter(year == 2016) |>
   slice_max(order_by = total_earnings, n = 10) |>
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
   pivot_longer(cols = c(total_earnings_female, total_earnings_male), names_to = "group", values_to = "earnings_by_group") |>
   mutate(sex = str_remove(group, pattern = "total_earnings_")) |>
-  ggplot(aes(x = fct_reorder(occupation, earnings_by_group), y = earnings_by_group, color = sex)) +
+  ggplot(aes(x = occupation, y = earnings_by_group, color = sex)) +
   geom_point(position = position_dodge(width = 0.5)) +
-  geom_linerange(aes(xmin = occupation, xmax = occupation, 
-                     ymin = 0, ymax = earnings_by_group),
+  geom_linerange(aes(ymin = 0, ymax = earnings_by_group),
                  position = position_dodge(width = 0.5)) +
   coord_flip()
 ```
@@ -681,14 +689,16 @@ Dumbbell plots can be a really simple and intuitive way to visualize a change or
 #| echo: false
 #| fig-align: "center"
 set.seed(123)
+
 jobs_clean |> 
   filter(year == 2016,
          group_label == "Occupations that are 75%+ female") |> 
   slice_sample(n = 10) |> 
+  mutate(occupation = fct_reorder(.f = occupation, .x = total_earnings)) |> 
   ggplot() +
-  geom_segment(aes(x = total_earnings_female, xend = total_earnings_male, 
-                   y = fct_reorder(occupation, total_earnings), yend = occupation),
-               size = 1, alpha = 0.8) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male),
+               linewidth = 1, alpha = 0.8) +
   geom_point(aes(x = total_earnings_male, y = occupation), color = "#EB5B57", size = 4) +
   geom_point(aes(x = total_earnings_female, y = occupation), color = "#16ADB1", size = 4) +
   labs(x = "Numeric variable", y = "Categorical variable") +
@@ -699,23 +709,17 @@ jobs_clean |>
   )
 ```
 
-We can make dumbbell plots using a combination of `geom_segment()` and `geom_point()`.
-
-::: notes
-See note: <https://stackoverflow.com/questions/35322919/grouped-data-by-factor-with-geom-segment>
-
-"You can think of `geom_linerange()` as a convenient version of geom_segment for a specific use case. `geom_segment()` is for when you need to draw arbitrary line segments in a fairly non-systematic way. `geom_linerange()` is for the specific case of a collection of vertical bars at specified x values with different lengths (e.g. error bars, etc)"
-:::
+We can make dumbbell plots using a combination of `geom_linerange()` and `geom_point()`.
 
 ---
 
 ## {#dumbbell-plot-subset data-menu-title="Dumbbell plot - subset data"} 
 
-[Subset occupation data]{.slide-title}
+[Let's use a subset of our data . . .]{.slide-title}
 
 <hr>
 
-[Let's say we want to explore differences in male vs. female median salaries across occupations that are female dominated (75%+ female), male dominated (75%+ male), and those that are a relatively even split (45-55% female). **Let's first randomly select 10 occupations from each of those categories:**]{.body-text-s}
+[. . .to explore differences in male vs. female median salaries across occupations that are female dominated (75%+ female), male dominated (75%+ male), and those that are a relatively even split (45-55% female).]{.body-text-s}
 
 ```{r}
 #| eval: true
@@ -740,10 +744,11 @@ f50 <- jobs_clean |>
 
 #.......combine dfs & relevel factors (for plotting order).......
 subset_jobs <- rbind(f75, m75, f50) |> 
-  mutate(group_label = fct_relevel(group_label, 
+  mutate(group_label = fct_relevel(.f = group_label, 
                                    "Occupations that are 75%+ female", 
                                    "Occupations that are 45-55% female", 
-                                   "Occupations that are 75%+ male")) 
+                                   "Occupations that are 75%+ male"),
+         occupation = fct_reorder(.f = occupation, .x = total_earnings))
 ```
 
 ---
@@ -763,10 +768,8 @@ See the output on the next slide.
 ggplot(subset_jobs) +
   
   # create dumbbells ----
-  geom_segment(aes(x = total_earnings_female, 
-                   xend = total_earnings_male, 
-                   y = fct_reorder(occupation, total_earnings), 
-                   yend = occupation)) + # reorder occupation by avg_salary here
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
   geom_point(aes(x = total_earnings_male, y = occupation), 
              color = "#CD93D8", 
              size = 2.5) +
@@ -780,6 +783,7 @@ ggplot(subset_jobs) +
   # axis breaks & $ labels ----
   scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
                      breaks = c(25000, 50000, 75000, 100000, 125000))
+
 ```
 
 ---
@@ -796,26 +800,25 @@ There are definitely some additional modifications we would need to make before 
 #| eval: true
 #| echo: false
 #| fig-align: "center"
+# initialize plot (we'll map our aesthetics locally for each geom, below) ----
 ggplot(subset_jobs) +
   
   # create dumbbells ----
-  geom_segment(aes(x = total_earnings_female, 
-                   xend = total_earnings_male, 
-                   y = fct_reorder(occupation, total_earnings), 
-                   yend = occupation)) + # reorder occupation by avg_salary here) 
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
   geom_point(aes(x = total_earnings_male, y = occupation), 
              color = "#CD93D8", 
-             size = 3) +
+             size = 2.5) +
   geom_point(aes(x = total_earnings_female, y = occupation), 
              color = "#6A1E99", 
-             size = 3) +
+             size = 2.5) +
   
   # facet wrap by group ----
   facet_wrap(~group_label, nrow = 3, scales = "free_y") + # "free_y" plots only the axis labels that exist in each group
   
   # axis breaks & $ labels ----
-  scale_x_continuous(labels = scales::label_dollar(accuracy = 1, scale = 0.001, suffix = "k"),
-                     breaks = c(25000, 50000, 75000))
+  scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000))
 ```
 
 ---
