added note to setup about where to find data on tidytuesday github repo

--- a/course-materials/keys/KEY-lecture4.1-rankings.qmd
+++ b/course-materials/keys/KEY-lecture4.1-rankings.qmd
@@ -14,6 +14,8 @@ This template follows [lecture 4.1 slides](../lecture-slides/lecture4.1-rankings
 
 ## Setup
 
+Data are downloaded directly from the [tidytuesday GitHub repository](https://github.com/rfordatascience/tidytuesday/tree/main/data/2019/2019-03-05).
+
 ```{r}
 #| eval: true
 #| echo: true
