some minor text edits to 4.2 slides before bed

--- a/course-materials/lecture-slides/lecture4.2-relationships-slides.qmd
+++ b/course-materials/lecture-slides/lecture4.2-relationships-slides.qmd
@@ -54,7 +54,7 @@ penguins |>
 <br>
 
 ::: {.footer}
-Line graphs (from week 3) are similar to scatter plots, except the x-axis variable is ordered chronologically and points are connected by lines to emphasize trends.
+Line graphs (from week 2) are similar to scatter plots, except the x-axis variable is ordered chronologically and points are connected by lines to emphasize trends.
 :::
 
 ---
@@ -109,6 +109,8 @@ In this lesson, we'll be exploring two main primary chart types:
 
 [The [Hubbard Brook Experimenatal Forest](https://hubbardbrook.org/) is a 8,700-acre hardwood research forest in the White Mountains of New Hampshire and home to a series of small watersheds occupying the valley’s north- and south-facing slopes.]{.body-text-s}
 
+<br>
+
 :::: {.columns}
 
 ::: {.column width="50%"}
@@ -138,9 +140,9 @@ knitr::include_graphics("images/week4/hbef-map.png")
 
 ::::
 
-::: {.footer}
-*I admittedly don't know much about water chemistry, but have skimmed a number of helpful resources throughout the creation of this lesson. They'll be linked as referenced.*
-:::
+<!-- ::: {.footer} -->
+<!-- *I admittedly don't know much about water chemistry, but have skimmed a number of helpful resources throughout the creation of this lesson. They'll be linked as referenced.* -->
+<!-- ::: -->
 
 ---
 
